slider alignment fix

--- a/www/sites/default/assets/styles/slider.less
+++ b/www/sites/default/assets/styles/slider.less
@@ -7,7 +7,7 @@
     right:44px;
     top: 25px;
     padding: 20px 67px 20px 30px;
-    width: 316px; height: 240px;
+    width: 304px; height: 240px;
     background:url('../images/slider-description-background.png') ;
     border-top: 3px #549ec5 solid;
     .rounded(5px);
